--- a/Source/Common/Projects/NTDirectX/Motions.cls
+++ b/Source/Common/Projects/NTDirectX/Motions.cls
@@ -95,10 +95,13 @@ Attribute Clear.VB_Description = "Clears all items with-in the collection, and t
 End Sub
 
 Private Sub Class_Initialize()
-    vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
+    Stats_Motions_Count = Stats_Motions_Count + 1
+    Set this = New NTNodes10.Collection
+    'vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
 End Sub
 
 Private Sub Class_Terminate()
+    Stats_Motions_Count = Stats_Motions_Count - 1
     Set this = Nothing
 End Sub
 
