--- a/Source/Common/Projects/NTDirectX/Orbits.cls
+++ b/Source/Common/Projects/NTDirectX/Orbits.cls
@@ -98,10 +98,13 @@ Attribute Clear.VB_Description = "Clears all items with-in the collection, and t
 End Sub
 
 Private Sub Class_Initialize()
-    vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
+    Stats_Orbits_Count = Stats_Orbits_Count + 1
+    Set this = New NTNodes10.Collection
+    'vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
 End Sub
 
 Private Sub Class_Terminate()
+    Stats_Orbits_Count = Stats_Orbits_Count - 1
     Set this = Nothing
 End Sub
 
