--- a/Source/Common/Projects/NTDirectX/Ranges.cls
+++ b/Source/Common/Projects/NTDirectX/Ranges.cls
@@ -99,10 +99,13 @@ Attribute Clear.VB_Description = "Clears all items with-in the collection, and t
 End Sub
 
 Private Sub Class_Initialize()
-    vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
+    Stats_Ranges_Count = Stats_Ranges_Count + 1
+    Set this = New NTNodes10.Collection
+    'vbaObjSetAddref this, ObjPtr(New NTNodes10.Collection)
 End Sub
 
 Private Sub Class_Terminate()
+    Stats_Ranges_Count = Stats_Ranges_Count - 1
     Set this = Nothing
 End Sub
 
