--- a/Source/Common/Projects/NTNodes10/Collection.cls
+++ b/Source/Common/Projects/NTNodes10/Collection.cls
@@ -188,16 +188,18 @@ Public Sub Clear() ' _
 Clears all items with-in the collection, and the Count property becomes zero.
 Attribute Clear.VB_Description = "Clears all items with-in the collection, and the Count property becomes zero."
     Dim ref As Item
-    Do Until propList.Count = 0
-        Set ref = propList(1)
-        propList.Remove 1
-        lptrList.Remove 1
-        If VBA.IsObject(ref.Value) Then
-            Set ref.Value = Nothing
-        End If
-        Set ref.Parent = Nothing
-        Set ref = Nothing
-    Loop
+    If Not propList Is Nothing Then
+        Do Until propList.Count = 0
+            Set ref = propList(1)
+            propList.Remove 1
+            lptrList.Remove 1
+            If VBA.IsObject(ref.Value) Then
+                Set ref.Value = Nothing
+            End If
+            Set ref.Parent = Nothing
+            Set ref = Nothing
+        Loop
+    End If
 End Sub
 
 Friend Sub AddItem(ByVal itm As Item)
